--- a/untitled1.ipynb
+++ b/untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrsUYoyuqFK2NmLmMyswja",
+      "authorship_tag": "ABX9TyOBuPxrWFha14Y9nOVS5YcM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,23 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/aiissaa/aissa/blob/main/untitled1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MASTER : data science pour l'économie et la finance\n",
+        "\n",
+        "aissa berrouhou\n",
+        "\n",
+        "Module : Langage de programmation\n",
+        "\n",
+        "Enacdré par : Dr. EL AACHAK Lotfi\n",
+        "\n",
+        "Atelier 2"
+      ],
+      "metadata": {
+        "id": "1A6KdM2-NtJM"
+      }
     },
     {
       "cell_type": "markdown",
@@ -52,11 +69,11 @@
         "     "
       ],
       "metadata": {
-        "id": "iANc57HQKB5V",
-        "outputId": "68214fce-2821-42f6-c7a8-2f4e28240749",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iANc57HQKB5V",
+        "outputId": "68214fce-2821-42f6-c7a8-2f4e28240749"
       },
       "execution_count": 1,
       "outputs": [
@@ -98,11 +115,11 @@
         "print(newList)"
       ],
       "metadata": {
-        "id": "_BMSDW0AL22M",
-        "outputId": "6fcdbdbe-c45e-4672-bde2-7dfd7233f8e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_BMSDW0AL22M",
+        "outputId": "6fcdbdbe-c45e-4672-bde2-7dfd7233f8e1"
       },
       "execution_count": 3,
       "outputs": [
@@ -145,11 +162,11 @@
         "     "
       ],
       "metadata": {
-        "id": "cK-b6bY8ML17",
-        "outputId": "ae8fd582-3a1e-47da-e6b6-15ec4b44bfbc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cK-b6bY8ML17",
+        "outputId": "ae8fd582-3a1e-47da-e6b6-15ec4b44bfbc"
       },
       "execution_count": 8,
       "outputs": [
@@ -183,11 +200,11 @@
         "     "
       ],
       "metadata": {
-        "id": "3c5qc4ibM4ZB",
-        "outputId": "3dca3502-dec5-4be9-ce25-867a05452876",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3c5qc4ibM4ZB",
+        "outputId": "3dca3502-dec5-4be9-ce25-867a05452876"
       },
       "execution_count": 11,
       "outputs": [
@@ -225,11 +242,11 @@
         "print(filtered_list) "
       ],
       "metadata": {
-        "id": "85KAUF9HNWe3",
-        "outputId": "7cf6b360-df8a-448d-fc88-60019fb6a700",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "85KAUF9HNWe3",
+        "outputId": "7cf6b360-df8a-448d-fc88-60019fb6a700"
       },
       "execution_count": 12,
       "outputs": [
